# EROS-Atmega328P

./: .gitignore  .gitmodules  Makefile  README.md  app.yaml  asw_500ms.h  asw_50ms.h  asw_ipc.h  config.c  config.h  eros.sh  main.c  pyproject.toml  todo.md
.github/workflows/: ci.yml
codegen/: README.md
codegen/appKnbSwt_ert_rtw/: appKnbSwt.c  appKnbSwt.h  appKnbSwt.mk  appKnbSwt_Intfc.c  appKnbSwt_Intfc.h  appKnbSwt_Param.c  appKnbSwt_Param.h  appKnbSwt_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
comprehensive-demo/: Makefile  README.md  app.yaml  asw_100ms.c  asw_10ms.c  asw_10ms.h  asw_500ms.c  asw_500ms.h  asw_50ms.c  asw_50ms.h  asw_signals.h  config.c  config.h  main.c  pwm.h  uart.c
drivers/: Makefile  README.md  acomp.c  acomp.h  adc.c  adc.h  eeprom.c  eeprom.h  extint.c  extint.h  i2c.c  i2c.h  icp.c  icp.h  pwm.c  pwm.h  spi.c  spi.h  timer0_pwm.c  timer0_pwm.h
drivers/mcal/: adc.c  adc.h  extint.c  extint.h  icp.c  usb_cdc.c
gui/: README.md  __init__.py  __main__.py  main_window.py  project.py  test_gui.py
kernel/: eros.c  eros.h  eros_tick.h  tiny_os.c  tiny_os.h  tiny_os_types.h
model/: appKnbSwt.sldd  appKnbSwt.slx  appKnbSwt_harnessInfo.xml
model/resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: Fcxo0F30uLd3GPUSL72_bM5kPp8p.xml
model/resources/project/FI0gxbH-PhwjE_riDQGHPyYMHks/: 6pn4z2IWx8ALCjkpbdVHrxmS6j0p.xml
model/resources/project/WZRuNzqc-Db7NcQAZO8Y-R8U9cc/: 66WgGCcF5RIH9MCEgPmgjZK9k3Ud.xml  AtMjXDrOSm8YDv3_4UFXiyrWqNEd.xml
model/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
model/test/: AppKnbSwt_Test.mldatx  TestInputs.mat  appKnbSwt_Harness1.slx
reference-demo/: Makefile  README.md  actuator.c  actuator.h  app.yaml  asw_100ms.c  asw_100ms.h  asw_10ms.c  asw_10ms.h  asw_500ms.c  asw_500ms.h  asw_50ms.c  asw_50ms.h  asw_signals.c  asw_signals.h  config.c  config.h  main.c  pwm.c  pwm.h  uart.c  uart.h  uart_print.c  uart_regs.h
rte/: README.md  README_ASW.md  Rte.c  Rte.h  Rte_Cfg.h
tests/: Makefile  README.md
tests/common/: testkit.c  testkit.h
tests/firmware/: test_acomp.c  test_adc.c  test_eeprom.c  test_extint.c  test_i2c.c  test_icp.c  test_model_knbswt.c  test_spi.c  test_timer0_pwm.c  test_uart.c
tests/host/: runtest.c
tools/: README.md  erosgen.py  test_erosgen.py
tools/erosgen/: __init__.py  asw.py  bind.py  cli.py  constants.py  diagnostics.py  errors.py  mcu.py  merge.py  model.py  models.py  paths.py  pwmcfg.py  report.py  validate.py  workspace.py
tools/erosgen/backends/: __init__.py  avr.py  base.py
tools/erosgen/emit/: __init__.py  a2l.py  asw.py  config.py  makefile.py  modes.py  osgen.py  project.py  rte.py  skeletons.py
tools/erosgen/mcu/: arduino_uno.yaml  atmega2560.yaml  atmega328p.yaml  atmega32u4.yaml  profile.py
tools/erosgen/parse/: cparse.py  ert.py  swc.py
tools/erosgen/schema/: app.schema.json
tools/fixtures/asw_task/: Makefile  Rte.c  Rte.h  Rte_Cfg.h  Rte_knob.h  app.yaml  config.c  config.h  knob.c  knob.h  knob_Intfc.c  knob_Intfc.h  knob_Param.c  knob_Param.h  os_gen.h
tools/fixtures/genmain/: app.yaml  asw_10ms.c.golden  main.c.golden  os_gen.h.golden  regen.py
tools/fixtures/model_app/: Makefile  Rte.c  Rte.h  Rte_appKnbSwt.h  app.yaml  config.c  config.h  main.c  os_gen.h
tools/fixtures/model_multi/: Makefile  Rte.c  Rte.h  Rte_Cfg.h  Rte_motor.h  app.yaml  config.c  config.h  main.c  os_gen.h
tools/fixtures/model_multi/motor_ert_rtw/: motor.c  motor.h  motor_Intfc.h  motor_Param.h
tools/fixtures/model_rte/: Rte.c.golden  Rte_Cfg.h.golden  app.yaml  regen.py
