[project]
name = "erosgen"
version = "0.1.0"
description = "EROS RTOS system configurator and code generator (the OIL-file compiler)."
requires-python = ">=3.9"
# Core stays PyYAML-only so a plain checkout can generate/validate/build.
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
# Phase 1: read scaling/dimension metadata from Embedded Coder's codeInfo.mat
# (MAT v5 -> scipy.io.loadmat; guard for v7.3/HDF5 which needs h5py).
mat = ["scipy>=1.10"]
# Phase 3: GUI + comment-preserving YAML round-trip.
gui = ["PySide6>=6.6", "ruamel.yaml>=0.18"]
# Phase 6: full draft-2020-12 validation of app.yaml against schema/app.schema.json
# (`erosgen --schema`). The schema is stdlib-loadable JSON, so it drives the
# dep-free key check without this extra; only running the FULL schema needs it.
schema = ["jsonschema>=4.18"]
# Phase 11 Tier A: pycparser-backed ASW parser fallback (models with `parser: c`)
# for ERT headers that don't fit the regex contract. Core parses via regex.
parse = ["pycparser>=2.21"]

[dependency-groups]
dev = [
    "jsonschema>=4.18",
    "pycparser>=2.21",
    "mypy>=1.19.1",
    "pytest>=8",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv]
# erosgen is run in place from tools/; uv only manages the dev environment and
# deps, it does not build/install erosgen as a package. Keep uv OUT of generated
# artifacts (the emitted Makefile's `config:` target stays plain `python3`).
package = false

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E/W) + bugbear (B) + pyupgrade (UP). Import
# sorting (I) is intentionally omitted: the tests use lazy in-function imports.
select = ["E", "F", "W", "B", "UP"]

[tool.mypy]
python_version = "3.10"             # mypy's floor; the code itself targets 3.9+
mypy_path = "tools"                 # so gui's `import erosgen` resolves
files = ["tools/erosgen", "gui"]

# ruamel.yaml, PySide6 and jsonschema ship no bundled stubs (and are optional
# extras absent from the lint env); treat them as untyped rather than failing
# the check. PyYAML is covered by types-PyYAML (a dev dep).
[[tool.mypy.overrides]]
module = ["ruamel", "ruamel.*", "PySide6.*", "jsonschema", "jsonschema.*", "pycparser", "pycparser.*"]
ignore_missing_imports = true
